# Onitama

./: Animal.cpp  Animal.h  CMakeLists.txt  Cards.cpp  Cards.h  ChessCards.cpp  ChessCards.h  DeckConfig.h  Leaf.cpp  Leaf.h  Node.cpp  Node.h  NodeVisitor.cpp  NodeVisitor.h  OnitamaCards.cpp  OnitamaCards.h  Piece.cpp  Piece.h  PieceVisitor.cpp  PieceVisitor.h  Ply.h  Position.cpp  Position.h  PuzzleGenerator.cpp  PuzzleGenerator.h  PuzzleWebApi.cpp  README.md  SearchConfig.h  SimpleCards.cpp  SimpleCards.h  StateEncoding.cpp  StateEncoding.h  TranspositionTable.cpp  TranspositionTable.h  WebApi.cpp  build_puzzle.sh  build_web.sh  main.cpp
docs/: index.html  onitama.js  puzzle-engine.js  puzzle-worker.js  puzzle.html  worker.js
tests/: CMakeLists.txt  engine_test.cpp  search_config_test.cpp  test_helpers.h
